# dxr-demo

./: .gitignore  CMakeLists.txt  README.md
lib/d3d12/: d3dx12.h
lib/imgui/imgui/examples/: imgui_impl_dx12.cpp  imgui_impl_dx12.h
src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Entities.hpp  Noise.cpp  Noise.hpp
src/d3d12/: Allocator.cpp  Allocator.hpp  Constants.hpp  Context.hpp  Descriptor.cpp  Descriptor.hpp  Frame.hpp  Imgui.cpp  Imgui.hpp  Raytracing.cpp  Raytracing.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
src/d3d12/raytracing/: Allocation.cpp  Allocation.hpp  BottomStructure.cpp  BottomStructure.hpp  Scene.cpp  Scene.hpp  TopStructure.cpp  TopStructure.hpp
src/d3d12/shaders/: shader.hlsl
src/interfaces/: IApplication.hpp  IRenderer.hpp
src/sdl/: Imgui.hpp  Main.cpp  Main.hpp
